# mpl-universe-simulator

./: .gitignore  CITATION.cff  CLAUDE.md  COPYRIGHT  LICENSE  README.md  pyproject.toml
demo/: demo_beta_scaling.py  demo_emergence.py  demo_flyby.py  demo_free_fall.py  demo_phi_grid.py  demo_phi_scaling.py  demo_radial_profile.py  demo_two_body.py
papers/: LICENSE  computational_parsimony_many_worlds.tex  emergent_gravity_from_finite_bandwidth.tex
specs/: design.md  requirements.md  tasks.md
src/mplsim/: __init__.py
src/mplsim/analysis/: __init__.py  comparison.py  emergence.py  phi_field.py  poisson.py
src/mplsim/core/: __init__.py  bandwidth_scheduler.py  kernel.py  lattice.py  messages.py  source_map.py  theoretical_scheduler.py
src/mplsim/experiments/: __init__.py
src/mplsim/patterns/: __init__.py  base.py  clock.py  particle.py
src/mplsim/viz/: __init__.py  fields.py  trajectories.py
src/mplsim/worlds/: __init__.py
tests/: conftest.py  test_import.py
tests/unit/: test_analysis.py  test_complex_state.py  test_kernel.py  test_lattice.py  test_messages.py  test_schrodinger_kernel.py  test_source_map.py  test_unitary_kernel.py
