[tool.poetry]
name = "mpl-universe-simulator"
version = "0.1.0"
description = "2D Message-Passing Lattice Universe Engine Simulator"
readme = "README.md"
authors = ["Laurent Eschenauer <laurent@eschenauer.be>"]
license = "MIT"
packages = [{include = "mplsim", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24"
scipy = "^1.11"
matplotlib = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
ipython = "^8.0"
jupyter = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
